--- a/web/workspace/pages/partials/metatags.dust
+++ b/web/workspace/pages/partials/metatags.dust
@@ -11,14 +11,14 @@
 <link rel="canonical" href="{global.protocol}://{host}{pathname}">
 
 <meta property="og:title" content="{+title}{@i18n}Open Source web services{/i18n}{/title}{?title} / DADI{/title}">
-<meta name="description" content="{^page.description}{global.description}{:else}{page.description}{/page.description}">
-<meta name="og:description" content="{^page.description}{global.description}{:else}{page.description}{/page.description}">
+<meta name="description" content="{^page.description}{@i18n}DADI is an enterprise-grade, deployment-ready web services stack, built around a microservices architecture.{/i18n}{:else}{page.description}{/page.description}">
+<meta name="og:description" content="{^page.description}{@i18n}DADI is an enterprise-grade, deployment-ready web services stack, built around a microservices architecture.{/i18n}{:else}{page.description}{/page.description}">
 <meta property="og:image" content="{global.protocol}://{host}{pathname}assets/img/og.jpg">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@dadi">
 <meta name="twitter:title" content="{+title}{@i18n}Open Source web services{/i18n}{/title}{?title} / DADI{/title}">
-<meta name="twitter:description" content="{^page.description}{global.description}{:else}{page.description}{/page.description}">
+<meta name="twitter:description" content="{^page.description}{@i18n}DADI is an enterprise-grade, deployment-ready web services stack, built around a microservices architecture.{/i18n}{:else}{page.description}{/page.description}">
 <meta name="twitter:image" content="{global.protocol}://{host}{pathname}assets/img/og.jpg">
 
 <meta name="geo.placename" content="London, UK">
