--- a/web/workspace/public/assets/css/main.css
+++ b/web/workspace/public/assets/css/main.css
@@ -1894,7 +1894,7 @@ select {
   line-height: 18px; }
 .explainer__blurb img {
   float: left;
-  margin: 4px 17px 0 0; }
+  margin: 2px 17px 20px 0; }
 .b-api {
   left: 37%;
   top: 274px; }
