--- a/web/workspace/pages/partials/navigation.dust
+++ b/web/workspace/pages/partials/navigation.dust
@@ -1,5 +1,5 @@
 <nav class="cf">
-  <a href="/{params.lang}/" class="inline-block marg__bottom">
+  <a href="/{params.lang}/" class="inline-block">
     <img src="/assets/img/dadi-{@select key=page.key}{@eq value="home"}colour{/eq}{@eq value="Products"}dark{/eq}{@none}light{/none}{/select}.svg" width="150" height="35" alt="DADI" class="logo">
   </a>
   <ol>
