--- a/web/workspace/pages/index.dust
+++ b/web/workspace/pages/index.dust
@@ -7,7 +7,7 @@
 <div class="clients">
   <div class="normal alignc container overflow-touch">
     <div class="pad__top pad__bottom">
-      <p class="inline-block hdr large txt--grey alignv">{@i18n}Already used around the web…{/i18n}</p>
+      <p class="inline-block hdr large txt--grey alignv">{i18n.results[0].alreadyused}</p>
     </div>
   </div>
 </div>
@@ -16,34 +16,34 @@
   <div class="container container--pad normal">
     <div class="grid pad__top">
       <div class="col w-1-2 pad__bottom">
-        <p class="hdr large txt--blue"><img class="alignv marg__right float--left" src="/assets/icons/database.svg" height="30"> {@i18n}API-first and COPE{/i18n}</p>
-        <p class="normal">{@i18n}Connects your content to everything: drive multiple products from a single editorial workflow.{/i18n}</p>
+        <p class="hdr large txt--blue"><img class="alignv marg__right float--left" src="/assets/icons/database.svg" height="30"> {i18n.results[0].apifirst_header}</p>
+        <p class="normal">{i18n.results[0].apifirst_body}</p>
       </div>
       <div class="col w-1-2 pad__bottom">
-        <p class="hdr large txt--blue"><img class="alignv marg__right float--left" src="/assets/icons/secure.svg" height="30"> {@i18n}Open source{/i18n}</p>
-        <p class="normal">{@i18n}Dive in and use straight away: enterprise muscle without the fat – or the greedy licence fees.{/i18n}</p>
-      </div>
-    </div>
-
-    <div class="grid">
-      <div class="col w-1-2 pad__bottom">
-        <p class="hdr large txt--blue"><img class="alignv marg__right float--left" src="/assets/icons/colors.svg" height="30"> {@i18n}Microservices technology{/i18n}</p>
-        <p class="normal">{@i18n}A platform built as small, independent processes enabling flexibility and high performance.{/i18n}</p>
-      </div>
-      <div class="col w-1-2 pad__bottom">
-        <p class="hdr large txt--blue"><img class="alignv marg__right float--left" src="/assets/icons/performance.svg" height="30"> {@i18n}Data-driven experiences{/i18n}</p>
-        <p class="normal">{@i18n}Conceived to enable customized experiences for individuals across multiple touch points.{/i18n}</p>
+        <p class="hdr large txt--blue"><img class="alignv marg__right float--left" src="/assets/icons/secure.svg" height="30"> {i18n.results[0].opensource_header}</p>
+        <p class="normal">{i18n.results[0].opensource_body}</p>
       </div>
     </div>
 
     <div class="grid">
       <div class="col w-1-2 pad__bottom">
-        <p class="hdr large txt--blue"><img class="alignv marg__right float--left" src="/assets/icons/layers.svg" height="30"> {@i18n}Bulletproof at scale{/i18n}</p>
-        <p class="normal">{@i18n}Powering over 190 products for major publishers and reaching a monthly audience of 150 million users.{/i18n}</p>
+        <p class="hdr large txt--blue"><img class="alignv marg__right float--left" src="/assets/icons/colors.svg" height="30"> {i18n.results[0].microservices_header}</p>
+        <p class="normal">{i18n.results[0].microservices_body}</p>
       </div>
       <div class="col w-1-2 pad__bottom">
-        <p class="hdr large txt--blue"><img class="alignv marg__right float--left" src="/assets/icons/colors.svg" height="30"> {@i18n}Speed to live{/i18n}</p>
-        <p class="normal">{@i18n}Products built using DADI technology are delivered in days and weeks, not weeks and months.{/i18n}</p>
+        <p class="hdr large txt--blue"><img class="alignv marg__right float--left" src="/assets/icons/performance.svg" height="30"> {i18n.results[0].datadriven_header}</p>
+        <p class="normal">{i18n.results[0].datadriven_header}</p>
+      </div>
+    </div>
+
+    <div class="grid">
+      <div class="col w-1-2 pad__bottom">
+        <p class="hdr large txt--blue"><img class="alignv marg__right float--left" src="/assets/icons/layers.svg" height="30"> {i18n.results[0].bulletproof_header}</p>
+        <p class="normal">{i18n.results[0].bulletproof_body}</p>
+      </div>
+      <div class="col w-1-2 pad__bottom">
+        <p class="hdr large txt--blue"><img class="alignv marg__right float--left" src="/assets/icons/colors.svg" height="30"> {i18n.results[0].speed_header}</p>
+        <p class="normal">{i18n.results[0].speed_body}</p>
       </div>
     </div>
   </div>
@@ -58,9 +58,9 @@
     <div class="col w-1-2 alignr bs-alignc">
       <div class="block pad support__self">
         <img class="alignv marg__top" src="/assets/icons/industry.svg" height="60">
-        <h2 class="txt--blue larger">{@i18n}Got a forward thinking engineering team?{/i18n}</h2>
-        <p class="normal">{@i18n}Roll up your sleeves and get into our code. DADI technology is fully open source and free to use.{/i18n}</p>
-        <p class="normal"><a href="https://github.com/dadi/" class="btn btn--blue small" onclick="ga('send','event','Github','Click','Forwardthinking');">{@i18n}Find us on Github{/i18n}</a>
+        <h2 class="txt--blue larger">{i18n.results[0].support_self_header}</h2>
+        <p class="normal">{i18n.results[0].support_self_body}</p>
+        <p class="normal"><a href="https://github.com/dadi/" class="btn btn--blue small" onclick="ga('send','event','Github','Click','Forwardthinking');">{i18n.results[0].github_find}</a>
           </p>
       </div>
     </div>
@@ -68,9 +68,9 @@
     <div class="col w-1-2 bs-alignc">
       <div class="block pad support__team">
         <img class="alignv marg__top" src="/assets/icons/paint.svg" height="60">
-        <h2 class="txt--green larger">{@i18n}Need a hand? Meet our support team{/i18n}</h2>
-        <p class="normal">{@i18n}We offer a range of services from product strategy to full support to deliver our technology.{/i18n}</p>
-        <p class="normal"><a href="/{params.lang}/support/" class="btn btn--green small">{@i18n}Our support{/i18n}</a>
+        <h2 class="txt--green larger">{i18n.results[0].support_enterprise_header}</h2>
+        <p class="normal">{i18n.results[0].support_enterprise_body}</p>
+        <p class="normal"><a href="/{params.lang}/support/" class="btn btn--green small">{i18n.results[0].our_support}</a>
         </p>
       </div>
     </div>
