--- a/web/workspace/pages/partials/metatags.dust
+++ b/web/workspace/pages/partials/metatags.dust
@@ -1,6 +1,6 @@
 <meta http-equiv="Content-Language" content="{params.lang}">
 
-<title>{+title}{@i18n}Open Source web services{/i18n}{/title}{?title} / DADI{/title}</title>
+<title>{+title}{i18n.results[0].tagline}{/title}{?title} / DADI{/title}</title>
 <link rel="stylesheet" type="text/css" href="/assets/css/main.min.css?v=1500977608">
 
 <meta name="copyright" content="{@formatDate unix=global.timestamp format="YYYY"/}">
@@ -10,15 +10,15 @@
 
 <link rel="canonical" href="{global.protocol}://{host}{pathname}">
 
-<meta property="og:title" content="{+title}{@i18n}Open Source web services{/i18n}{/title}{?title} / DADI{/title}">
-<meta name="description" content="{^page.description}{@i18n}DADI is an enterprise-grade, deployment-ready web services stack, built around a microservices architecture.{/i18n}{:else}{page.description}{/page.description}">
-<meta name="og:description" content="{^page.description}{@i18n}DADI is an enterprise-grade, deployment-ready web services stack, built around a microservices architecture.{/i18n}{:else}{page.description}{/page.description}">
+<meta property="og:title" content="{+title}{i18n.results[0].tagline}{/title}{?title} / DADI{/title}">
+<meta name="description" content="{^page.description}{i18n.results[0].about}{:else}{page.description}{/page.description}">
+<meta name="og:description" content="{^page.description}{i18n.results[0].about}{:else}{page.description}{/page.description}">
 <meta property="og:image" content="{global.protocol}://{host}{pathname}assets/img/og.jpg">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@dadi">
-<meta name="twitter:title" content="{+title}{@i18n}Open Source web services{/i18n}{/title}{?title} / DADI{/title}">
-<meta name="twitter:description" content="{^page.description}{@i18n}DADI is an enterprise-grade, deployment-ready web services stack, built around a microservices architecture.{/i18n}{:else}{page.description}{/page.description}">
+<meta name="twitter:title" content="{+title}{i18n.results[0].tagline}{/title}{?title} / DADI{/title}">
+<meta name="twitter:description" content="{^page.description}{i18n.results[0].about}{:else}{page.description}{/page.description}">
 <meta name="twitter:image" content="{global.protocol}://{host}{pathname}assets/img/og.jpg">
 
 <meta name="geo.placename" content="London, UK">
