--- a/web/workspace/pages/roadmap.dust
+++ b/web/workspace/pages/roadmap.dust
@@ -1,21 +1,19 @@
 {>"partials/header" /}
 
 <div class="container container--pad">
-  <h1 class="no-marg-i kilo txt--green marg__bottom">{@i18n}Roadmap{/i18n}</h1>
+  <h1 class="no-marg-i kilo txt--green marg__bottom">{i18n.results[0].roadmap}</h1>
 
-  <p class="medium marg__top">{@i18n}DADI is produced and maintained under an iterative and incremental development cycle. We manage development through Git Issues and Projects and operate a prioritized roadmap for major releases, focusing on a few, high impact features at a time.{/i18n}</p>
+  <p class="medium marg__top">{i18n.results[0].roadmap_overvew}</p>
 </div>
 
 <div class="container container--divider">
   <div class="grid pad__bottom--x2">
     <div class="col w-1-2">
-      <p class="larger hdr txt--green marg__bottom">{@i18n}You can help us improve DADI (or change this roadmap){/i18n}</p>
-
-      <p class="normal">{@i18n}Want to contribute to the work on this roadmap, or suggest new ideas? Volunteer your time, or Propose an initiative. To contribute as an organization or business, consider joining one of our supporter programs that fund this work.{/i18n}</p>
-
-      <p class="normal fwb">{@i18n}Your support can make a difference.{/i18n}</p>
-      <a href="/{params.lang}/contact/" class="btn btn--blue small">{@i18n}Contact us{/i18n}</a><br><br>
-      <a href="https://github.com/dadi" class="btn btn--blue small">{@i18n}Find us on Github{/i18n}</a>
+      <p class="larger hdr txt--green marg__bottom">{i18n.results[0].roadmap_help}</p>
+      <p class="normal">{i18n.results[0].roadmap_contribute}</p>
+      <p class="normal fwb">{i18n.results[0].roadmap_support}</p>
+      <a href="/{params.lang}/contact/" class="btn btn--blue small">{i18n.results[0].contact}</a><br><br>
+      <a href="https://github.com/dadi" class="btn btn--blue small">{i18n.results[0].github_find}</a>
     </div>
     <div class="col w-1-2 normal">
       <h3>Q3 2017</h3>
