--- a/web/workspace/pages/partials/navigation.dust
+++ b/web/workspace/pages/partials/navigation.dust
@@ -20,6 +20,7 @@
         <optgroup label="Languages">
           <option value="/en{pathNoLang}" {@eq key=params.lang value="en"}selected{/eq}>English</option>
           <option value="/de{pathNoLang}" {@eq key=params.lang value="de"}selected{/eq}>Deutsche</option>
+          <option value="/jp{pathNoLang}" {@eq key=params.lang value="jp"}selected{/eq}>日本語</option>
         </optgroup>
         <optgroup label="Coming soon">
           <option disabled value="fr">Français</option>
@@ -28,7 +29,6 @@
           <option disabled value="ru">Pусский</option>
           <option disabled value="es">Español</option>
           <option disabled value="pt">Português</option>
-          <option disabled value="jp">日本語</option>
       </select>
     </li>
   </ul>
