--- a/web/workspace/pages/partials/navigation.dust
+++ b/web/workspace/pages/partials/navigation.dust
@@ -21,9 +21,9 @@
           <option value="/en{pathNoLang}" {@eq key=params.lang value="en"}selected{/eq}>English</option>
           <option value="/de{pathNoLang}" {@eq key=params.lang value="de"}selected{/eq}>Deutsche</option>
           <option value="/jp{pathNoLang}" {@eq key=params.lang value="jp"}selected{/eq}>日本語</option>
+          <option value="/fr{pathNoLang}" {@eq key=params.lang value="fr"}selected{/eq}>Français</option>
         </optgroup>
         <optgroup label="Coming soon">
-          <option disabled value="fr">Français</option>
           <option disabled value="zh_hans">中文 (CN/SG)</option>
           <option disabled value="zh_hant">中文 (TW/HK)</option>
           <option disabled value="ru">Pусский</option>
